unpackaged/main/default/objects/Opportunity/fields/Lead_additional_info__c.field-meta.xml
<CustomField>
    <fullName>Lead_additional_info__c</fullName>
    <label>Lead additional info</label>
    <length>100</length>
    <type>Text</type>
</CustomField>