unpackaged/main/default/objects/Opportunity/fields/Lead_country__c.field-meta.xml
<CustomField>
    <fullName>Lead_country__c</fullName>
    <label>Lead country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>