unpackaged/main/default/objects/Opportunity/fields/lead_post_call_info__c.field-meta.xml
<CustomField>
    <fullName>lead_post_call_info__c</fullName>
    <label>lead-post-call-info</label>
    <length>100</length>
    <type>Text</type>
</CustomField>