unpackaged/main/default/objects/Opportunity/fields/Lead_pre_call_info__c.field-meta.xml
<CustomField>
    <fullName>Lead_pre_call_info__c</fullName>
    <label>Lead pre call info</label>
    <length>100</length>
    <type>Text</type>
</CustomField>