unpackaged/main/default/objects/Opportunity/fields/Most_recent_contact__c.field-meta.xml
<CustomField>
    <fullName>Most_recent_contact__c</fullName>
    <label>Most recent contact</label>
    <length>100</length>
    <type>Text</type>
</CustomField>