unpackaged/main/default/objects/Opportunity/fields/New_call_info__c.field-meta.xml
<CustomField>
    <fullName>New_call_info__c</fullName>
    <label>New call info</label>
    <length>100</length>
    <type>Text</type>
</CustomField>