unpackaged/main/default/objects/Opportunity/fields/New_Lead__c.field-meta.xml
<CustomField>
    <fullName>New_Lead__c</fullName>
    <label>New Lead</label>
    <length>100</length>
    <type>Text</type>
</CustomField>