unpackaged/main/default/objects/Opportunity/fields/New_lead_contact__c.field-meta.xml
<CustomField>
    <fullName>New_lead_contact__c</fullName>
    <label>New lead contact</label>
    <length>100</length>
    <type>Text</type>
</CustomField>