unpackaged/main/default/objects/Opportunity/fields/New_Opportunity_Field__c.field-meta.xml
<CustomField>
    <fullName>New_Opportunity_Field__c</fullName>
    <label>New Opportunity Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>