unpackaged/main/default/objects/Opportunity/fields/Opportunity_call_details__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_call_details__c</fullName>
    <label>Opportunity call details</label>
    <length>100</length>
    <type>Text</type>
</CustomField>