unpackaged/main/default/objects/Opportunity/fields/Opportunity_pre_call_details__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_pre_call_details__c</fullName>
    <label>Opportunity pre call details</label>
    <length>100</length>
    <type>Text</type>
</CustomField>