unpackaged/main/default/objects/Opportunity/fields/Post_call_notes__c.field-meta.xml
<CustomField>
    <fullName>Post_call_notes__c</fullName>
    <label>Post call notes</label>
    <length>100</length>
    <type>Text</type>
</CustomField>