unpackaged/main/default/objects/Opportunity/fields/Sales_rep__c.field-meta.xml
<CustomField>
    <fullName>Sales_rep__c</fullName>
    <label>Sales rep</label>
    <length>100</length>
    <type>Text</type>
</CustomField>