unpackaged/main/default/objects/Opportunity/fields/Support_Description__c.field-meta.xml
<CustomField>
    <fullName>Support_Description__c</fullName>
    <label>Support Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>